added some css, added some comments to help figure out and keep track of the provided css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* add " :root { " ? */
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -21,6 +23,16 @@ textarea {
   border-bottom: 10px solid black;
 }
 
+.oneHourSection {
+  border-top: 1px solid white;
+  border-left: ;
+}
+
+.hourLabel {
+  border-top: dashed 1px;
+  font-size: 10px;
+}
+
 .description {
   white-space: pre-wrap;
 }
@@ -42,22 +54,22 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
-.past {
+.past { /* for background color if hour section has already passed */
   background-color: #d3d3d3;
   color: white;
 }
 
-.present {
+.present { /* for background color if hour section is the current hour */
   background-color: #ff6961;
   color: white;
 }
 
-.future {
+.future { /* for background color if hour section is still in the future */
   background-color: #77dd77;
   color: white;
 }
 
-.saveBtn {
+.saveBtn { /* styling for the save button needed at right side of hour section */
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
