added bootstrap colum styling to hour blocks, also added extra feature buttons, plan to have them go invisible with a separate button at the top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,9 @@ body {
   line-height: 1;
 }
 
-textarea {
+textarea { /* text area currently only used for hour block text areas */
   background: transparent;
+  background-color: rgb(194, 194, 194);
   border: none;
   resize: none;
   color: #000000;
@@ -15,7 +16,7 @@ textarea {
   padding: 10px;
 }
 
-.jumbotron {
+.jumbotron { /* This is the header */
   text-align: center;
   background-color: transparent;
   color: black;
@@ -24,13 +25,19 @@ textarea {
 }
 
 .oneHourSection {
-  border-top: 1px solid white;
-  border-left: ;
+  
+  border-top: 3px solid white;
+  border-left: solid;
+  display: flex;
+  height: 100px;
+  text-align: center;
+  
+
 }
 
 .hourLabel {
   border-top: dashed 1px;
-  font-size: 10px;
+  font-size: 20px;
 }
 
 .description {
@@ -77,7 +84,7 @@ textarea {
   color: white;
 }
 
-.saveBtn i:hover {
+.saveBtn i:hover { /* maybe do a background color change on hover */
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
