--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ textarea {
   text-align: center;
 }
 
+.taskInputArea {
+  white-space: pre-wrap;
+}
+
 .hourLabel {
   border-top: dashed 1px;
   font-weight: bold;
@@ -72,19 +76,19 @@ textarea {
 .past {
   /* for background color if hour section has already passed */
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   /* for background color if hour section is the current hour */
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   /* for background color if hour section is still in the future */
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
